--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.2.1",
     "styled-components": "^5.3.3"
   },
